--- a/environment.yml
+++ b/environment.yml
@@ -66,3 +66,5 @@ dependencies:
   - pytorch=1.0.1=py3.7_cuda9.0.176_cudnn7.4.2_2
   - torchvision=0.2.2=py_3
   - fasttext=0.9.1
+  - gensim=3.8.0
+  - nltk=3.4.5
